--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -232,7 +232,7 @@ out = ancombc(
   phyloseq = pseq, 
   formula = "pheno", 
   p_adj_method = "fdr", 
-  zero_cut = 1, # no prev filtering necessary anymore 
+  prv_cut = 0, # no prev filtering necessary anymore 
   lib_cut = 0, 
   group = "pheno", 
   struc_zero = TRUE, 
