--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -424,7 +424,7 @@ out_cov = ancombc(
   phyloseq = pseq, 
   formula = "pheno + age", # here we add age to the model
   p_adj_method = "fdr", 
-  zero_cut = 0.90, 
+  prv_cut = 0.9, 
   lib_cut = 0, 
   group = "pheno", 
   struc_zero = TRUE, 
