--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -231,6 +231,7 @@ Visualizing the variance explained:
 
 ```{r, message=FALSE, warning=FALSE, fig.height=8, fig.width=10}
 library(patchwork)
+library(ggplot2)
 wrap_plots(
     plot_variance_explained(model.trained, x="view", y="factor", plot_total = T),
     nrow = 2
