--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -4,23 +4,33 @@ Here you can find assignments on different topics.
 
 TIPS:
 
-   - Create a reproducible workflow using Rmd file. 
    - Add comments that explain what each line or lines of code do. This helps you and others to understand your code and find bugs. Furthermore, it is easier for you to reuse the code, and it promotes transparency.
    - Interpret results by comparing them to literature. List main findings, so that results can easily be understood by others without advanced data analytics knowledge.
    - Avoid hard-coding. Use variables which get values in the beginning of the pipeline. That way it is easier for you to modify parameters and reuse the code.
+   
+## Reproducible reporting {.unlisted .unnumbered}
 
-## Introduction to TreeSE
+1. Create an R Markdown file.
+2. Add a code chunk and give a name for it.
+3. Import e.g., iris dataset, and create a dotplot with a title.
+4. Create another code chunk and plot. 
+5. Adjust the size of the figure, and choose from the options that the code chunk will not be shown in the report.
+6. Add some text.
+7. Add an R command within the text.
+8. Create an HTML file from the Rmd file.
+
+## Introduction to TreeSE {.unlisted .unnumbered}
 
 Import data from CSV files to TreeSE.
 
-1. Import data
+1. Import data.
 2. Construct a TreeSE.
 3. Check that importing is done correctly. E.g., you can choose random samples and features,
 and check that their values equal between raw files and TreeSE.
 
 Functions that might be useful: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, SimpleList
 
-## Data exploration
+## Data exploration {.unlisted .unnumbered}
 
 1. Please install the latest development version of mia from GitHub.
 2. Load experimental dataset from mia.
@@ -33,7 +43,7 @@ Functions that might be useful: DataFrame, TreeSummarizedExperiment, matrix, row
 
 Functions that might be useful: nrow, ncol, dim, summary, table, quantile, unique, transformSamples, ggplot, wilcox.test, addPerCellQC, agglomerateByRank, estimateDiversity, plotAbundance
 
-## Differential abundance analysis
+## Differential abundance analysis {.unlisted .unnumbered}
 
 1. Please install the latest development version of mia from GitHub.
 2. Load experimental dataset from mia.
@@ -43,7 +53,7 @@ Functions that might be useful: nrow, ncol, dim, summary, table, quantile, uniqu
 
 Functions that might be useful: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, agglomerateByRank, transformSamples, transformFeatures, subsetByPrevalentTaxa
 
-## Basics of community composition
+## Basics of community composition {.unlisted .unnumbered}
 
 1. Please install the latest development version of mia from GitHub.
 2. Load experimental dataset from mia.
@@ -54,7 +64,7 @@ Functions that might be useful: wilcox.test, kruskal.test, ggplot, pheatmap, Com
 
 Functions that might be useful: runMDS, runRDA, anova.cca, transformSamples, agglomerateByRank, ggplot, plotReducedDim
 
-## Introduction to MAE
+## Introduction to MAE {.unlisted .unnumbered}
 
 1. Create TreeSE data containers from individual CSV files.
 2. Combine TreeSE into MAE.
@@ -63,7 +73,7 @@ Functions that might be useful: runMDS, runRDA, anova.cca, transformSamples, agg
 
 Functions that might be useful: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, MultiAssayExperiment, ExperimentList, SimpleList
 
-## Introduction to multiomics
+## Introduction to multiomics {.unlisted .unnumbered}
 
 1. Load experimental dataset from microbiomeDataSets (e.g., HintikkaXOData).
 2. Analyze correlations between experiments. (Taxa vs lipids, Taxa vs biomarkers, Lipids vs biomarkers)
