--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -287,7 +287,8 @@ tse_phylum <- agglomerateByRank(tse,
                                 rank = "Phylum",
                                 onRankOnly = TRUE)
 # Add clr-transformation on samples
-tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
+tse_phylum <- transformSamples(tse_phylum, method = "relabundance", pseudocount = 1)
+tse_phylum <- transformSamples(tse_phylum, method = "clr", abund_values = "relabundance")
 # Add z-transformation on features (taxa)
 tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
                                 method = "z", name = "clr_z")
@@ -296,7 +297,8 @@ tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr",
 tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
 # Does clr-transformation
-tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "clr", pseudocount = 1)
+tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "relabundance", pseudocount = 1)
+tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "clr", abund_values = "relabundance")
 # Does z-transformation
 tse_phylum_subset <- transformFeatures(tse_phylum_subset, abund_values = "clr", 
                                        method = "z", name = "clr_z")
