--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -61,7 +61,8 @@ techniques, we can visualize the abundances at Phylum level.
 ```{r heatmap}
 library(ggplot2)
 # Add clr-transformation on samples
-tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
+tse_phylum <- transformSamples(tse_phylum, method = "relabundance", pseudocount = 1)
+tse_phylum <- transformSamples(tse_phylum, abund_values = "relabundance", method = "clr")
 # Add z-transformation on features (taxa)
 tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
                                 method = "z", name = "clr_z")
@@ -210,7 +211,8 @@ Computing the euclidean PCoA and storing it as a data frame
 
 ```{r}
 # Does clr transformation. Pseudocount is added, because data contains zeros.
-tse <- transformCounts(tse, method = "clr", pseudocount = 1)
+tse <- transformCounts(tse, method = "relabundance", pseudocount = 1)
+tse <- transformCounts(tse, "relabundance", method = "clr")
 
 # Gets clr table
 clr_assay <- assays(tse)$clr
