--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -124,7 +124,8 @@ Computing the euclidean PCoA and storing it as a data frame
 
 ```{r}
 # Does clr transformation. Pseudocount is added, because data contains zeros.
-tse <- transformCounts(tse, method = "clr", pseudocount = 1)
+tse <- transformSamples(tse, method = "relabundance", pseudocount = 1)
+tse <- transformCounts(tse, "relabundance", "clr")
 
 library(scater)
 # Calculate PCoA
@@ -177,6 +178,7 @@ library(scater)
 
 data("enterotype", package="mia")
 tse <- enterotype
+tse <- transformSamples(tse, method = "relabundance")
 tse <- transformCounts(tse, method = "rclr")
 
 # Performing and storing UMAP
