--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -19,7 +19,7 @@ TIPS:
 7. Add an R command within the text.
 8. Create an HTML file from the Rmd file.
 
-## Introduction to TreeSE {.unlisted .unnumbered}
+## Introduction to TreeSummarizedExperiment (TreeSE) {.unlisted .unnumbered}
 
 Import data from CSV files to TreeSE.
 
@@ -64,7 +64,7 @@ Functions that might be useful: wilcox.test, kruskal.test, ggplot, pheatmap, Com
 
 Functions that might be useful: runMDS, runRDA, anova.cca, transformSamples, agglomerateByRank, ggplot, plotReducedDim
 
-## Introduction to MAE {.unlisted .unnumbered}
+## Introduction to MultiAssayExperient (MAE) {.unlisted .unnumbered}
 
 1. Create TreeSE data containers from individual CSV files.
 2. Combine TreeSE into MAE.
