--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -181,7 +181,8 @@ colData(mae)$Diet <- ifelse(colData(mae)$Diet == "High-fat" |
 mae[[1]] <- mae[[1]][!duplicated(rownames(assay(mae[[1]]))), ]
 
 # Transforming microbiome data with rclr
-mae[[1]] <- transformCounts(mae[[1]], abund_values = "counts", method = "rclr")
+mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
+mae[[1]] <- transformCounts(mae[[1]], abund_values = "relabundance", method = "rclr")
 
 # Transforming metabolomic data with log10
 mae[[2]] <- transformSamples(mae[[2]], abund_values = "nmr", method = "log10")
