--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -214,22 +214,14 @@ Computing the euclidean PCoA and storing it as a data frame
 tse <- transformCounts(tse, method = "relabundance", pseudocount = 1)
 tse <- transformCounts(tse, "relabundance", method = "clr")
 
-# Gets clr table
-clr_assay <- assays(tse)$clr
-
-# Transposes it to get taxa to columns
-clr_assay <- t(clr_assay)
-
-# Calculates Euclidean distances between samples. Because taxa is in columns,
-# it is used to compare different samples.
-euclidean_dist <- vegan::vegdist(clr_assay, method = "euclidean")
+library(scater)
 
 # Does principal coordinate analysis
-euclidean_pcoa <- ecodist::pco(euclidean_dist)
+df <- calculateMDS(tse, exprs_values = "clr", method = "euclidean")
 
 # Creates a data frame from principal coordinates
-euclidean_pcoa_df <- data.frame(pcoa1 = euclidean_pcoa$vectors[,1], 
-                                pcoa2 = euclidean_pcoa$vectors[,2])
+euclidean_pcoa_df <- data.frame(pcoa1 = df[,1], 
+                                pcoa2 = df[,2])
 
 ```
 
