--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -181,8 +181,8 @@ colData(mae)$Diet <- ifelse(colData(mae)$Diet == "High-fat" |
 mae[[1]] <- mae[[1]][!duplicated(rownames(assay(mae[[1]]))), ]
 
 # Transforming microbiome data with rclr
-mae[[1]] <- transformCounts(mae[[1]], method = "relabundance", pseudocount = 1)
-mae[[1]] <- transformCounts(mae[[1]], abund_values = "relabundance", method = "clr")
+mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
+mae[[1]] <- transformCounts(mae[[1]], abund_values = "relabundance", method = "rclr")
 
 # Transforming metabolomic data with log10
 mae[[2]] <- transformSamples(mae[[2]], abund_values = "nmr", method = "log10")
@@ -246,8 +246,8 @@ The top weights for each assay using the three first factors:
 plots <- lapply(c("microbiota", "metabolites","biomarkers"), function(name) {
     plot_top_weights(model.trained,
                      view = name,
-                     factors = 1:3,
-                     nfeatures = 10) +
+                     factors = 1:2,
+                     nfeatures = 5) +
         labs(title = paste0("Top weights of the ", name," assay"))
 })
 wrap_plots(plots, nrow = 3) & theme(text = element_text(size = 8))
