--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -240,13 +240,13 @@ wrap_plots(
                     theme = theme(plot.title = element_text(hjust = 0.5)))
 ```
 
-The top weights for each assay using the three first factors:
+The top weights for each assay using all 5 factors:
 
 ```{r, warning=FALSE, message=FALSE, fig.height=10, fig.width=10}
 plots <- lapply(c("microbiota", "metabolites","biomarkers"), function(name) {
     plot_top_weights(model.trained,
                      view = name,
-                     factors = 1:3,
+                     factors = "all",
                      nfeatures = 10) +
         labs(title = paste0("Top weights of the ", name," assay"))
 })
