--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -407,7 +407,7 @@ Let us agglomerate the data at a Genus level and getting the dominant taxa per s
 # Agglomerate to genus level
 tse_Genus <- agglomerateByRank(tse, rank="Genus")
 # Convert to relative abundances
-tse_Genus <- transformSamples(tse, method = "relabundance", abund_values="counts")
+tse_Genus <- transformSamples(tse_Genus, method = "relabundance", abund_values="counts")
 # Add info on dominant genus per sample
 tse_Genus <- addPerSampleDominantTaxa(tse_Genus, abund_values="relabundance", name = "dominant_taxa")
 ```
