--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -2,7 +2,7 @@
 
 Here you can find assignments on different topics. 
 
-TIPS:
+**Tips for exercises:**
 
    - Add comments that explain what each line or lines of code do. This helps you and others to understand your code and find bugs. Furthermore, it is easier for you to reuse the code, and it promotes transparency.
    - Interpret results by comparing them to literature. List main findings, so that results can easily be understood by others without advanced data analytics knowledge.
@@ -116,8 +116,10 @@ Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::H
 2. Test if data agglomeration to higher taxonomic ranks affects the indices
 3. Look for differences in alpha diversity between groups or correlation with a continuous variable
 
+Useful functions: estimateDiversity, colSums, agglomerateByRank, kruskal.test, cor
 
-### Alpha diversity 
+
+### Alpha diversity extra
 
 1. Estimate Shannon diversity for the data
 2. Try also another diversity index and compare the results with a scatterplot
@@ -130,10 +132,9 @@ Useful functions: estimateDiversity, colSums, geom_point, geom_boxplot
 
 
 
-
 ## Community composition
 
-### Beta diversity
+### Beta diversity basics
 
 1. Visualize community variation with different methods (PCA, MDS, NMDS, etc.) with plotReduceDim and with different dissimilarities and transformations,plot also other than the first two axes.
 2. Use PERMANOVA to test differences in beta diversity. You can also try including continuous and/or categorical covariates
@@ -142,8 +143,7 @@ Useful functions: estimateDiversity, colSums, geom_point, geom_boxplot
 5. Try RDA to test the variance explained by external variables
 
 
-
-### Basics of community composition
+### Beta diversity extra
 
 1. Install the latest development version of mia from GitHub.
 2. Load experimental dataset from mia.
