--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -482,13 +482,19 @@ if (!require(fido)){
 
 Loading the libraries and importing data:
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, eval=FALSE}
 library(fido)
 library(mia)
 library(microbiomeDataSets)
-
 tse <- SprockettTHData()
 ```
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+# saveRDS(tse, file="data/SprockettTHData.Rds")
+# Hidden reading of the saved data
+tse <- readRDS("data/SprockettTHData.Rds")
+```
+
 
 We pick three covariates ("Sex","Age_Years","Delivery_Mode") during this
 analysis as an example, and beforehand we check for missing data:
