--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -27,7 +27,7 @@ tse <- transformSamples(tse, method="relabundance")
 molten_tse <- meltAssay(tse,
                         add_row_data = TRUE,
                         add_col_data = TRUE,
-                        abund_values = "relabundance")
+                        assay_name = "relabundance")
 molten_tse
 ```
 
