--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -43,7 +43,7 @@ tse <- atlas1006()
 tse <- transformSamples(tse, method = "relabundance")
 
 library(miaViz)
-plotAbundanceDensity(tse, layout = "jitter", abund_values = "relabundance",
+plotAbundanceDensity(tse, layout = "jitter", assay_name = "relabundance",
                      n = 40, point_size=1, point_shape=19, point_alpha=0.1) + 
     scale_x_log10(label=scales::percent)
 ```
@@ -53,7 +53,7 @@ visualized as a density plot over a log scaled axis, with
 "nationality" indicated by colors:
 
 ```{r, warning=FALSE, message=FALSE}
-plotAbundanceDensity(tse, layout = "density", abund_values = "relabundance",
+plotAbundanceDensity(tse, layout = "density", assay_name = "relabundance",
                      n = 5, colour_by="nationality", point_alpha=1/10) +
     scale_x_log10()
 ```
@@ -86,7 +86,7 @@ threshold (`as_relative = FALSE`) at read count 1 (`detection = 1`) is
 accessed.
 
 ```{r concepts_prevalence2}
-head(getPrevalence(tse, detection = 1, sort = TRUE, abund_values = "counts",
+head(getPrevalence(tse, detection = 1, sort = TRUE, assay_name = "counts",
                    as_relative = FALSE))
 ```
 
@@ -107,7 +107,7 @@ applied on the resulting object.
 altExp(tse,"Phylum") <- agglomerateByRank(tse, "Phylum")
 # Check prevalence for the Phylum abundance table from the altExp slot
 head(getPrevalence(altExp(tse,"Phylum"), detection = 1/100, sort = TRUE,
-                   abund_values = "counts", as_relative = TRUE))
+                   assay_name = "counts", as_relative = TRUE))
 ```
 
 
@@ -116,7 +116,7 @@ the fly.
 
 ```{r}
 head(getPrevalence(tse, rank = "Phylum", detection = 1/100, sort = TRUE,
-                   abund_values = "counts", as_relative = TRUE))
+                   assay_name = "counts", as_relative = TRUE))
 ```
 
 Note that, by default, `na.rm = TRUE` is used for agglomeration in
@@ -159,7 +159,7 @@ are stored in the altExp slot.
 ```{r}
 rowData(altExp(tse,"Phylum"))$prevalence <- 
     getPrevalence(altExp(tse,"Phylum"), detection = 1/100, sort = FALSE,
-                  abund_values = "counts", as_relative = TRUE)
+                  assay_name = "counts", as_relative = TRUE)
 ```
 
 The prevalences can be then plotted via the plotting functions from
@@ -180,17 +180,17 @@ altExps(tse) <-
           function(y){
               rowData(y)$prevalence <- 
                   getPrevalence(y, detection = 1/100, sort = FALSE,
-                                abund_values = "counts", as_relative = TRUE)
+                                assay_name = "counts", as_relative = TRUE)
               y
           })
 top_phyla <- getTopTaxa(altExp(tse,"Phylum"),
                         method="prevalence",
                         top=5L,
-                        abund_values="counts")
+                        assay_name="counts")
 top_phyla_mean <- getTopTaxa(altExp(tse,"Phylum"),
                              method="mean",
                              top=5L,
-                             abund_values="counts")
+                             assay_name="counts")
 x <- unsplitByRanks(tse, ranks = taxonomyRanks(tse)[1:6])
 x <- addTaxonomyTree(x)
 ```
