--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -77,7 +77,7 @@ Richness gives the number of features present within a community and can be calc
 
 ```{r}
 tse <- mia::estimateRichness(tse, 
-                             abund_values = "counts", 
+                             assay_name = "counts", 
                              index = "observed", 
                              name="observed")
 
@@ -104,7 +104,7 @@ diversity index based on the selected assay data.
 
 ```{r estimate-shannon}
 tse <- mia::estimateDiversity(tse, 
-                              abund_values = "counts",
+                              assay_name = "counts",
                               index = "shannon", 
                               name = "shannon")
 head(colData(tse)$shannon)
@@ -152,7 +152,7 @@ The Faith index is returned by the function `estimateFaith`.
 
 ```{r phylo-div-1}
 tse <- mia::estimateFaith(tse,
-                          abund_values = "counts")
+                          assay_name = "counts")
 head(colData(tse)$faith)
 ```
 
@@ -175,7 +175,7 @@ Load `picante` R package and get the `phylo` stored in `rowTree`.
 
 ```{r phylo-div-3}
 tse <- mia::estimateDiversity(tse, 
-                              abund_values = "counts",
+                              assay_name = "counts",
                               index = "faith", 
                               name = "faith")
 ```
@@ -186,7 +186,7 @@ Evenness can be calculated with `estimateEvenness`.
 
 ```{r evenness-1}
 tse <- estimateEvenness(tse, 
-                        abund_values = "counts", 
+                        assay_name = "counts", 
                         index="simpson")
 head(colData(tse)$simpson)
 ```
@@ -198,7 +198,7 @@ Dominance can be calculated with `estimateDominance`. Here, the `Relative index`
 
 ```{r dominance-1}
 tse <- estimateDominance(tse, 
-                         abund_values = "counts", 
+                         assay_name = "counts", 
                          index="relative")
 
 head(colData(tse)$relative)
@@ -211,7 +211,7 @@ calculated with `estimateDiversity`.
 
 ```{r rarity-1}
 tse <- mia::estimateDiversity(tse, 
-                              abund_values = "counts",
+                              assay_name = "counts",
                               index = "log_modulo_skewness")
 
 head(colData(tse)$log_modulo_skewness)
@@ -223,7 +223,7 @@ Divergence can be evaluated with `estimateDivergence`. Reference and algorithm f
 
 ```{r}
 tse <- mia::estimateDivergence(tse,
-                               abund_values = "counts",
+                               assay_name = "counts",
                                reference = "median",
                                FUN = vegan::vegdist)
 ```
