--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -141,7 +141,7 @@ samples in a `TSE` object includes the following, where each data point represen
 ```{r}
 # estimate shannon diversity index
 tse <- mia::estimateDiversity(tse, 
-                              abund_values = "counts",
+                              assay_name = "counts",
                               index = "shannon", 
                               name = "shannon")
 # plot shannon diversity index, colour-labeled by Sample Type
@@ -158,7 +158,7 @@ _patchwork_ package is then exploited.
 ```{r}
 # estimate faith diversity index
 tse <- mia::estimateFaith(tse,
-                          abund_values = "counts")
+                          assay_name = "counts")
 # store colData into a data frame
 coldata <- as.data.frame(colData(tse))
 # generate plots for shannon and faith indices
@@ -259,19 +259,19 @@ tse_order <- agglomerateByRank(tse,
                                 onRankOnly = TRUE)
 # transform counts into relative abundance
 tse_order <- transformCounts(tse_order,
-                              abund_values = "counts",
+                              assay_name = "counts",
                               method = "relabundance")
 # get top orders
 top_taxa <- getTopTaxa(tse_order,
                        top = 10,
-                       abund_values = "relabundance")
+                       assay_name = "relabundance")
 # leave only names for top 10 orders and label the rest with "Other"
 order_renamed <- lapply(rowData(tse_order)$Order,
                    function(x){if (x %in% top_taxa) {x} else {"Other"}})
 rowData(tse_order)$Order <- as.character(order_renamed)
 # plot composition as a bar plot
 plotAbundance(tse_order,
-              abund_values = "relabundance",
+              assay_name = "relabundance",
               rank = "Order",
               order_rank_by = "abund",
               order_sample_by = "Clostridiales")
@@ -282,7 +282,7 @@ pf _plotAbundance_.
 
 ```{r plotAbundance2}
 # Create plots
-plots <- plotAbundance(tse_order, abund_values = "relabundance", rank = "Order",
+plots <- plotAbundance(tse_order, assay_name = "relabundance", rank = "Order",
                        order_rank_by = "abund", order_sample_by = "Clostridiales",
                        features = "SampleType")
 
@@ -335,9 +335,9 @@ tse_phylum <- agglomerateByRank(tse,
                                 onRankOnly = TRUE)
 # Add clr-transformation on samples
 tse_phylum <- transformSamples(tse_phylum, method = "relabundance", pseudocount = 1)
-tse_phylum <- transformSamples(tse_phylum, method = "clr", abund_values = "relabundance")
+tse_phylum <- transformSamples(tse_phylum, method = "clr", assay_name = "relabundance")
 # Add z-transformation on features (taxa)
-tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
+tse_phylum <- transformFeatures(tse_phylum, assay_name = "clr", 
                                 method = "z", name = "clr_z")
 
 # Takes subset: only samples from feces, skin, or tongue
@@ -345,9 +345,9 @@ tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces"
 
 # Does clr-transformation
 tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "relabundance", pseudocount = 1)
-tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "clr", abund_values = "relabundance")
+tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "clr", assay_name = "relabundance")
 # Does z-transformation
-tse_phylum_subset <- transformFeatures(tse_phylum_subset, abund_values = "clr", 
+tse_phylum_subset <- transformFeatures(tse_phylum_subset, assay_name = "clr", 
                                        method = "z", name = "clr_z")
 
 # Get n most abundant taxa, and subsets the data by them
