--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -407,9 +407,9 @@ Let us agglomerate the data at a Genus level and getting the dominant taxa per s
 # Agglomerate to genus level
 tse_Genus <- agglomerateByRank(tse, rank="Genus")
 # Convert to relative abundances
-tse_Genus <- transformSamples(tse, method = "relabundance", abund_values="counts")
+tse_Genus <- transformSamples(tse, method = "relabundance", assay_name="counts")
 # Add info on dominant genus per sample
-tse_Genus <- addPerSampleDominantTaxa(tse_Genus, abund_values="relabundance", name = "dominant_taxa")
+tse_Genus <- addPerSampleDominantTaxa(tse_Genus, assay_name="relabundance", name = "dominant_taxa")
 ```
 
 
@@ -424,7 +424,7 @@ Getting top taxa and visualizing the abundance on PCoA.
 
 ```{r}
 # Getting the top taxa
-top_taxa <- getTopTaxa(tse_Genus,top = 6, abund_values = "relabundance")
+top_taxa <- getTopTaxa(tse_Genus,top = 6, assay_name = "relabundance")
 
 # Naming all the rest of non top-taxa as "Other"
 most_abundant <- lapply(colData(tse_Genus)$dominant_taxa,
