--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -32,7 +32,7 @@ tse <- relAbundanceCounts(tse)
 
 # Getting top taxa on a Phylum level
 tse_phylum <- agglomerateByRank(tse, rank ="Phylum", onRankOnly=TRUE)
-top_taxa <- getTopTaxa(tse_phylum,top = 5, abund_values = "relabundance")
+top_taxa <- getTopTaxa(tse_phylum,top = 5, assay_name = "relabundance")
 
 # Renaming the "Phylum" rank to keep only top taxa and the rest to "Other"
 phylum_renamed <- lapply(rowData(tse)$Phylum,
@@ -40,7 +40,7 @@ phylum_renamed <- lapply(rowData(tse)$Phylum,
 rowData(tse)$Phylum <- as.character(phylum_renamed)
 
 # Visualizing the composition barplot, with samples order by "Bacteroidetes"
-plotAbundance(tse, abund_values="relabundance", rank = "Phylum",
+plotAbundance(tse, assay_name="relabundance", rank = "Phylum",
               order_rank_by="abund", order_sample_by = "Bacteroidetes")
 ```
 
@@ -62,12 +62,12 @@ techniques, we can visualize the abundances at Phylum level.
 library(ggplot2)
 # Add clr-transformation on samples
 tse_phylum <- transformSamples(tse_phylum, method = "relabundance", pseudocount = 1)
-tse_phylum <- transformSamples(tse_phylum, abund_values = "relabundance", method = "clr")
+tse_phylum <- transformSamples(tse_phylum, assay_name = "relabundance", method = "clr")
 # Add z-transformation on features (taxa)
-tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
+tse_phylum <- transformFeatures(tse_phylum, assay_name = "clr", 
                                 method = "z", name = "clr_z")
 # Melts the assay
-df <- meltAssay(tse_phylum, abund_values = "clr_z")
+df <- meltAssay(tse_phylum, assay_name = "clr_z")
 
 # Determines the scaling of colours
 maxval <- round(max(abs(df$clr_z)))
