--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -104,8 +104,8 @@ rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]])
 correlations <- testExperimentCrossCorrelation(mae, 
                                                experiment1 = 1,
                                                experiment2 = 2,
-                                               abund_values1 = "log10", 
-                                               abund_values2 = "nmr",
+                                               assay_name1 = "log10", 
+                                               assay_name2 = "nmr",
                                                method = "spearman", 
                                                p_adj_threshold = NULL,
                                                cor_threshold = NULL,
@@ -182,13 +182,13 @@ mae[[1]] <- mae[[1]][!duplicated(rownames(assay(mae[[1]]))), ]
 
 # Transforming microbiome data with rclr
 mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
-mae[[1]] <- transformCounts(mae[[1]], abund_values = "relabundance", method = "rclr")
+mae[[1]] <- transformCounts(mae[[1]], assay_name = "relabundance", method = "rclr")
 
 # Transforming metabolomic data with log10
-mae[[2]] <- transformSamples(mae[[2]], abund_values = "nmr", method = "log10")
+mae[[2]] <- transformSamples(mae[[2]], assay_name = "nmr", method = "log10")
 
 # Transforming biomarker data with z-transform
-mae[[3]] <- transformFeatures(mae[[3]], abund_values = "signals", method = "z", pseudocount = 1)
+mae[[3]] <- transformFeatures(mae[[3]], assay_name = "signals", method = "z", pseudocount = 1)
 
 # Removing assays no longer needed
 assay(mae[[1]], "counts") <- NULL
