--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -183,7 +183,7 @@ For complete list of available transformations and parameters, see function
 
 ```{r}
 tse <- transformSamples(tse, method = "relabundance")
-tse <- transformSamples(x = tse, abund_values = "relabundance", method = "clr", 
+tse <- transformSamples(x = tse, assay_name = "relabundance", method = "clr", 
                         pseudocount = 1, name = "clr_transformation")
 
 head(assay(tse, "clr_transformation"))
@@ -213,7 +213,7 @@ in one sample.
 ```{r}
 taxa.abund.cc1 <- getAbundanceSample(tse, 
                                      sample_id = "CC1",
-                                     abund_values = "counts")
+                                     assay_name = "counts")
 taxa.abund.cc1[1:10]
 ```
 
@@ -222,7 +222,7 @@ taxa.abund.cc1[1:10]
 ```{r}
 taxa.abundances <- getAbundanceFeature(tse, 
                                       feature_id = "Phylum:Bacteroidetes",
-                                      abund_values = "counts")
+                                      assay_name = "counts")
 taxa.abundances[1:10]
 ```
 
