--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -22,7 +22,7 @@ tse <- subsetSamples(tse, colData(tse)$Country == "Finland")
 # Agglomerate to phylum level
 tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 # Get top taxa
-rel_taxa <- getTopTaxa(tse, top = 8, abund_values = "counts")
+rel_taxa <- getTopTaxa(tse, top = 8, assay_name = "counts")
 # Take only the top taxa
 tse <- subsetTaxa(tse, is.element(rownames(tse), rel_taxa))
 
@@ -47,8 +47,8 @@ tse <- subsetTaxa(tse, is.element(rownames(tse), rel_taxa))
 
 # CLR and Z transforms
 tse <- transformSamples(tse, method = "relabundance")
-tse <- transformCounts(tse, abund_values = "relabundance", method = "clr", pseudocount = 1)
-tse <- transformFeatures(tse, abund_values = "clr", method = "z")
+tse <- transformCounts(tse, assay_name = "relabundance", method = "clr", pseudocount = 1)
+tse <- transformFeatures(tse, assay_name = "clr", method = "z")
 
 Countries <- data.frame("Country" = colData(tse)$Country)
 rownames(Countries) <- colData(tse)$Sample_ID
@@ -218,9 +218,9 @@ Looking at heatmaps of the CSTs can reveal structure on a different level. Using
 
 ```{r message = FALSE, warning = FALSE, results = FALSE}
 # Z transform of CLR counts
-tse2 <- transformCounts(tse2, abund_values = "counts", method = "relabundance")
-tse2 <- transformCounts(tse2, abund_values = "relabundance", method = "clr", pseudocount = 1)
-tse2 <- transformFeatures(tse2, abund_values = "clr", method = "z")
+tse2 <- transformCounts(tse2, assay_name = "counts", method = "relabundance")
+tse2 <- transformCounts(tse2, assay_name = "relabundance", method = "clr", pseudocount = 1)
+tse2 <- transformFeatures(tse2, assay_name = "clr", method = "z")
 # get top taxa
 tse2 <- subsetTaxa(tse2, is.element(rownames(tse2), rel_taxa))
 
@@ -387,9 +387,9 @@ Visualise dmm clusters in a heatmap.
 
 ```{r}
 # get clr + z-transformed counts
-tse_dmn <- transformCounts(tse_dmn, abund_values = "counts", method = "relabundance")
-tse_dmn <- transformCounts(tse_dmn, abund_values = "relabundance", method = "clr", pseudocount = 1)
-tse_dmn <- transformFeatures(tse_dmn, abund_values = "clr", method = "z")
+tse_dmn <- transformCounts(tse_dmn, assay_name = "counts", method = "relabundance")
+tse_dmn <- transformCounts(tse_dmn, assay_name = "relabundance", method = "clr", pseudocount = 1)
+tse_dmn <- transformFeatures(tse_dmn, assay_name = "clr", method = "z")
 # objects containing dmm component information
 clust <- factor(vec)
 names(clust) <- colnames(tse_dmn)
